--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"next": "14.2.3",
@@ -23,6 +24,8 @@
 		"eslint": "^8",
 		"eslint-config-next": "14.2.3",
 		"eslint-config-prettier": "^9.1.0",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.5",
 		"postcss": "^8",
 		"prettier": "^3.3.1",
 		"tailwindcss": "^3.4.1",
