--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 	},
 	"dependencies": {
 		"@aws-amplify/adapter-nextjs": "^1.2.4",
+		"@fortawesome/fontawesome-svg-core": "^6.5.2",
+		"@fortawesome/free-regular-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@hookform/resolvers": "^3.6.0",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.0.2",
