--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.390.0",
 		"next": "14.2.3",
+		"qrcode.react": "^3.1.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.5",
