--- a/package.json
+++ b/package.json
@@ -20,17 +20,22 @@
 		"@hookform/resolvers": "^3.6.0",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tabs": "^1.0.4",
+		"@radix-ui/react-toast": "^1.1.5",
 		"aws-amplify": "^6.3.6",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.390.0",
 		"next": "14.2.3",
 		"react": "^18",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.5",
+		"react-router-dom": "^6.23.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8",
