--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"aws-amplify": "^6.3.6",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"html5-qrcode": "^2.3.8",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.390.0",
 		"next": "14.2.3",
@@ -33,6 +34,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.5",
+		"react-select": "^5.8.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8",
