--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toast": "^1.1.5",
 		"aws-amplify": "^6.3.6",
+		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"html5-qrcode": "^2.3.8",
 		"date-fns": "^3.6.0",
+		"html5-qrcode": "^2.3.8",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.390.0",
 		"next": "14.2.3",
@@ -39,8 +40,8 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.5",
-		"react-select": "^5.8.0",
 		"react-router-dom": "^6.23.1",
+		"react-select": "^5.8.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8",
