--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,5 @@
 {
 	"extends": "./tsconfig.json",
-	"includes": ["src/**/*.ts", "src/**/*.tsx", ".eslintrc.json"],
+	"include": ["src/**/*.ts", "src/**/*.tsx", ".eslintrc.json"],
 	"exclude": ["node_modules", "dist"]
 }
